layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__condition_only_applies_to_nearest_modal.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(r#\"If payment is late, the Company shall deliver, and the Vendor shall refund.\"#)"
---
If     payment     is     late  ,     the     Company     shall     deliver  ,     and     the     Vendor     shall     refund  .
╰╯If
                                                          ╰───╯Shall
                                                                                                              ╰───╯Shall
                                                          ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Company" }, obligation_type: Duty, action: "deliver", conditions: [ConditionRef { condition_type: If, text_preview: "payment is late" }] }, conf: 0.75)
                                                            └─@obligor_source─>[11..11]
                                                            └─#action_span─>[13..15]
                                                                                                              ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Vendor" }, obligation_type: Duty, action: "refund", conditions: [] }, conf: 0.75)
                                                                                                                └─@obligor_source─>[22..22]
                                                                                                                └─#action_span─>[24..26]
