layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__contract_delivery_clause.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(r#\"ABC Corporation (the \"Seller\") shall deliver the Products to Buyer within thirty days of the Effective Date.\"#)"
---
ABC     Corporation     (  the     "  Seller  "  )     shall     deliver     the     Products     to     Buyer     within     thirty     days     of     the     Effective     Date  .
                                                       ╰───╯Shall
                        ╰────────────────────────╯Scored(DefinedTerm { term_name: "Seller", definition_type: Parenthetical }, conf: 0.90)
                                                       ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Seller" }, obligation_type: Duty, action: "deliver the Products to Buyer within thirty days of the Effective Date", conditions: [] }, conf: 0.75)
                                                         └─@obligor_source─>[8..8]
                                                         └─#action_span─>[12..36]
