layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__contract_payment_clause.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(r#\"The Buyer shall pay the Purchase Price to the Seller within fifteen days of delivery.\"#)"
---
The     Buyer     shall     pay     the     Purchase     Price     to     the     Seller     within     fifteen     days     of     delivery  .
                  ╰───╯Shall
                  ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Buyer" }, obligation_type: Duty, action: "pay the Purchase Price to the Seller within fifteen days of delivery", conditions: [] }, conf: 0.75)
