layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__multiple_obligations_in_sentence.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(r#\"ABC Corp (the \"Company\") shall deliver goods and the Vendor may inspect them.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     shall     deliver     goods     and     the     Vendor     may     inspect     them  .
                                                 ╰───╯Shall
                                                                                                            ╰─╯May
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                                                                                ╰──╯Scored(PronounReference { pronoun: "them", pronoun_type: ThirdPlural, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 19, confidence: 0.6 }, AntecedentCandidate { text: "may", is_defined_term: false, token_distance: 5, confidence: 0.5 }, AntecedentCandidate { text: "Vendor", is_defined_term: false, token_distance: 7, confidence: 0.45999999999999996 }, AntecedentCandidate { text: "and", is_defined_term: false, token_distance: 11, confidence: 0.38 }, AntecedentCandidate { text: "goods", is_defined_term: false, token_distance: 13, confidence: 0.33999999999999997 }] }, conf: 0.40)
                                                 ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Company" }, obligation_type: Duty, action: "deliver goods", conditions: [] }, conf: 0.75)
                                                   └─@obligor_source─>[8..8]
                                                   └─#action_span─>[12..16]
                                                                                                            ╰─╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Vendor" }, obligation_type: Permission, action: "inspect them", conditions: [] }, conf: 0.75)
                                                                                                              └─@obligor_source─>[22..22]
                                                                                                              └─#action_span─>[24..28]
