layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__multiword_noun_obligor.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(\"The Service Provider shall deliver services on time.\")"
---
The     Service     Provider     shall     deliver     services     on     time  .
                                 ╰───╯Shall
                                 ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Service Provider" }, obligation_type: Duty, action: "deliver services on time", conditions: [] }, conf: 0.75)
                                   └─@obligor_source─>[2..4]
                                   └─#action_span─>[6..14]
