layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__no_obligor_should_skip.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(\"shall deliver goods.\")"
---
shall     deliver     goods  .
╰───╯Shall
