layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__obligation_across_sentences.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(r#\"ABC Corp (the \"Company\") shall deliver goods. The Company shall ensure quality.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     shall     deliver     goods  .     The     Company     shall     ensure     quality  .
                                                 ╰───╯Shall
                                                                                                        ╰───╯Shall
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                                            ╰─────╯Scored(TermReference { term_name: "Company", definition_type: Parenthetical }, conf: 0.95)
                                                 ╰───╯Scored(ObligationPhrase { obligor: NounPhrase { text: "Company" }, obligation_type: Duty, action: "deliver goods", conditions: [] }, conf: 0.75)
                                                                                                        ╰───╯Scored(ObligationPhrase { obligor: TermRef { term_name: "Company", confidence: 0.9500000000000001 }, obligation_type: Duty, action: "ensure quality", conditions: [] }, conf: 0.85)
