layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__obligation_obligor_from_pronoun.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(r#\"ABC Corp (the \"Company\") exists. It shall deliver goods.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     exists  .     It     shall     deliver     goods  .
                                                                      ╰───╯Shall
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                               ╰╯[A] Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 12, confidence: 0.7100000000000001 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 22, confidence: 0.35 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 20, confidence: 0.35 }] }, conf: 0.71)
                                                                      ╰───╯Scored(ObligationPhrase { obligor: PronounRef { pronoun: "It", resolved_to: "Company", is_defined_term: true, confidence: 0.7100000000000001 }, obligation_type: Duty, action: "deliver goods", conditions: [] }, conf: 0.90)
                                                                        └─@obligor_source─>[A]
                                                                        └─#action_span─>[17..21]
