layered-contracts/src/tests/snapshots/layered_contracts__tests__obligation__obligation_obligor_from_term_reference.snap
---
source: layered-contracts/src/tests/obligation.rs
expression: "test_obligations(r#\"\"Contractor\" means John Doe. The Contractor shall provide services.\"#)"
---
"  Contractor  "     means     John     Doe  .     The     Contractor     shall     provide     services  .
                     ╰───╯Means
                                                                          ╰───╯Shall
╰────────────────────────╯Scored(DefinedTerm { term_name: "Contractor", definition_type: QuotedMeans }, conf: 0.95)
                                                           ╰────────╯Scored(TermReference { term_name: "Contractor", definition_type: QuotedMeans }, conf: 0.95)
                                                                          ╰───╯Scored(ObligationPhrase { obligor: TermRef { term_name: "Contractor", confidence: 0.9500000000000001 }, obligation_type: Duty, action: "provide services", conditions: [] }, conf: 0.85)
